--- a/config/_default/languages.toml
+++ b/config/_default/languages.toml
@@ -8,13 +8,33 @@
   # contentDir = "content/en"  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
 
 # Uncomment the lines below to configure your website in a second language.
-#[zh]
-#  languageCode = "zh-Hans"
-#  contentDir = "content/zh"
-#  title = "Chinese website title..."
-#  [zh.params]
+#[fr]
+#  languageCode = "fr"
+#  contentDir = "content/fr"
+#  title = "Clara A Stafford"
+#  [fr.params]
 #    description = "Site description in Chinese..."
-#  [[zh.menu.main]]
-#    name = "Wo"
+#  [[fr.menu.main]]
+#    name = "Navigation"
 #    url = "#about"
-#    weight = 1
+#    weight = 10
+#
+#  [[fr.menu.main]]
+#    name = "Publications"
+#    url = "#featured"
+#    weight = 30
+#
+#  [[fr.menu.main]]
+#    name = "Prix & Bourses"
+#    url = "#accomplishments"
+#    weight = 20
+#
+#  [[fr.menu.main]]
+#    name = "Contact"
+#    url = "#contact"
+#    weight = 40
+#
+#  [[fr.menu.main]]
+#     name = "CV"
+#     url = "files/fr/cv.pdf"
+#     weight = 50
