--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -280,3 +280,8 @@ plugins_js  = []
 [cms]
   # See https://sourcethemes.com/academic/docs/install/#install-with-web-browser
   netlify_cms = true
+
+# Icon Pack Extensions
+[icon.pack]
+  ai = true # Enable the Academicons icon pack https://jpwalsh.github.io/Academicons
+
