--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,10 +8,10 @@
   url = "#about"
   weight = 10
 
-[[main]]
-  name = "Portfolio"
-  url = "#posts"
-  weight = 20
+#[[main]]
+#  name = "Portfolio"
+#  url = "#posts"
+#  weight = 20
 
 #[[main]]
  # name = "Projects"
