--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -106,7 +106,7 @@ appointment_url = ""
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/cas4077"},
-  #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:cas4077"},
+  {icon = "github", icon_pack = "fab", name = "My work", link = "https://github.com/cas4077"},
   {icon = "researchgate", icon_pack = "ai", name = "Follow Me", link = "https://www.researchgate.net/profile/Clara_Stafford"},
   {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
   # {icon = "telegram", icon_pack = "fab", name = "Telegram Me", link = "https://telegram.me/@Telegram"},
@@ -154,7 +154,7 @@ sharing = true
 
 # Show a copyright license from creativecommons.org in the site footer?
 # Page specific copyright licenses are also possible by adding this option to a page's front matter.
-copyright_license = {enable = false, allow_derivatives = false, share_alike = true, allow_commercial = false, notice = "This work is licensed under {license}"}
+copyright_license = {enable = true, allow_derivatives = false, share_alike = true, allow_commercial = false, notice = "This work is licensed under {license}"}
 
 # Link authors to their profile page? (true/false)
 link_authors = true
