Updated CV and linked CV menu bar to a PDF file

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -47,5 +47,5 @@
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
  [[main]]
     name = "CV"
-    url = "#experience"
+    url = "static/files/Work-CV_clara-stafford.pdf"
     weight = 60
