--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -105,7 +105,7 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/cas4077"},
+  {icon = "twitter", icon_pack = "fab", name = "DM Me", link = "https://twitter.com/claraAstafford"},
   {icon = "github", icon_pack = "fab", name = "My work", link = "https://github.com/cas4077"},
   {icon = "researchgate", icon_pack = "ai", name = "Follow Me", link = "https://www.researchgate.net/profile/Clara_Stafford"},
   {icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
@@ -120,7 +120,7 @@ contact_links = [
 sharing_image = "avatar.jpg"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "cas4077"
+twitter = "claraAstafford"
 
 ############################
 ## Regional Settings
