--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -77,6 +77,10 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 
 [module]
   [[module.imports]]
-    path = "github.com/wowchemy/wowchemy-hugo-modules/wowchemy"
+    path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify-cms"
   [[module.imports]]
-    path = "github.com/wowchemy/wowchemy-hugo-modules/netlify-cms-academic"
+    path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-netlify"
+  [[module.imports]]
+    path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy-plugin-reveal"
+  [[module.imports]]
+    path = "github.com/wowchemy/wowchemy-hugo-themes/modules/wowchemy/v5"
